--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -22,3 +22,8 @@ body {
   // --secondary-color: rgba(138, 43, 226, var(--gradient-opacity));
   // --accent-color: rgba(180, 170, 220, var(--gradient-opacity));
 }
+
+body {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 14px;
+}
