--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -218,10 +218,17 @@
 :root {
   --header-height: 54px;
   --chat-max-width: 37rem;
-  --chat-min-width: 640px;
+  --chat-min-width: 772px;
   --workbench-width: min(calc(100% - var(--chat-min-width)), 2536px);
   --workbench-inner-width: var(--workbench-width);
   --workbench-left: calc(100% - var(--workbench-width));
+
+  /* Custom Background and Font */
+  --custom-bg-color: #0A0A0A;
+  --custom-font-family: "Inter", sans-serif;
+  --custom-font-weight: 400;
+  --custom-font-size: 15px;
+  --custom-line-height: 26px;
 
   /* Toasts */
   --toastify-color-progress-success: var(--bolt-elements-icon-success);
